Improve man page.

--- a/photo-upload.1
+++ b/photo-upload.1
@@ -26,7 +26,8 @@ show this help message and exit
 Display program license.
 .TP
 \fB\-s\fR SERVICE_NAME, \fB\-\-service\fR=\fISERVICE_NAME\fR
-Name of service to use.
+Name of service to use. Use \fBphoto-upload \-l\fR to list curently 
+available services.
 .TP
 \fB\-l\fR, \fB\-\-list\-services\fR
 List available services.
