Used spell checker :-).

--- a/photo-upload.1
+++ b/photo-upload.1
@@ -26,7 +26,7 @@ show this help message and exit
 Display program license.
 .TP
 \fB\-s\fR SERVICE_NAME, \fB\-\-service\fR=\fISERVICE_NAME\fR
-Name of service to use. Use \fBphoto-upload \-l\fR to list curently 
+Name of service to use. Use \fBphoto-upload \-l\fR to list currently 
 available services.
 .TP
 \fB\-l\fR, \fB\-\-list\-services\fR
@@ -50,7 +50,7 @@ Uploading all photos from /folder to default service and opening web browser to 
 photo-upload \-b /folder/*.jpg
 
 .TP
-Adding one image to existiong session on ilikephoto.cz service:
+Adding one image to existing session on ilikephoto.cz service:
 
 photo-upload \-s ilikephoto.cz \-S f1721a19cc3c95218525a8429d48dab2 /tmp/Obraz024.jpg
 
