Add dm-paradies service.

--- a/README
+++ b/README
@@ -14,11 +14,12 @@ Supported services overview
 New - you can create new order
 Reuse - you can upload photos to existing order (using --session)
 
-Service       | URL                          | New    | Reuse  
---------------|------------------------------|--------|-------
-droxi.cz      | http://foto.droxi.cz/        | Yes    |  Yes
-fotostar.cz   | http://sberna.fotostar.cz/   | Yes    |  Yes
-ilikephoto.cz | http://sberna.ilikephoto.cz/ | Yes[1] |  Yes
+Service             | URL                                          | New    | Reuse  
+--------------------|----------------------------------------------|--------|-------
+droxi.cz            | http://foto.droxi.cz/                        | Yes    |  Yes
+fotostar.cz         | http://sberna.fotostar.cz/                   | Yes    |  Yes
+dm-drogeriemarkt.cz | http://www.dm-drogeriemarkt.cz/fotoparadies/ | Yes    |  Yes
+ilikephoto.cz       | http://sberna.ilikephoto.cz/                 | Yes[1] |  Yes
 
 [1]: You need to manually inject cookie to browser after creating
 session.
