--- a/photo-upload.1
+++ b/photo-upload.1
@@ -1,7 +1,7 @@
 .TH PHOTO-UPLOAD "1" "October 2007" "photo-upload 0.4" "User Commands"
 
 .SH NAME
-photo-upload \- manual page for photo-upload 0.4
+photo-upload \- tool for uploading photos
 
 .SH SYNOPSIS
 .B photo-upload
