--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,5 @@
-NEWS
-====
+ChangeLog for photo-uploader
+============================
 
 Major changes for each release are described here. Detailed changes between
 two versions can be retrieved from Subversion.
