--- a/photo-upload.1
+++ b/photo-upload.1
@@ -82,6 +82,12 @@ their documentation for details. Example configuration file:
 
 	service = droxi.cz
 
+Some services require additional configuration sections, eg. with login names:
+
+    [happyfoto.cz]
+    user = name
+    password = passphrase
+
 .SH LICENCE
 This program is licensed under GNU/GPL version 2.
 
