Date and version.

--- a/photo-upload.1
+++ b/photo-upload.1
@@ -1,4 +1,4 @@
-.TH PHOTO-UPLOAD "1" "December 2007" "photo-upload 0.5" "User Commands"
+.TH PHOTO-UPLOAD "1" "March 2009" "photo-upload 0.7" "User Commands"
 
 .SH NAME
 photo-upload \- tool for uploading photos
@@ -104,4 +104,4 @@ More information is available on program website:
 Michal Cihar <\fImichal@cihar.com\fR>
 
 .SH COPYRIGHT
-Copyright \(co 2007 Michal Cihar <\fImichal@cihar.com\fR>
+Copyright \(co 2007 - 2009 Michal Cihar <\fImichal@cihar.com\fR>
