--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,8 @@ two versions can be retrieved from Subversion.
 0.8
 === (2009-??-??)
 
+* Fixed grabbing URL from imageshack.
+
 0.7
 === (2009-05-11)
 
