--- a/ChangeLog
+++ b/ChangeLog
@@ -2,7 +2,7 @@ ChangeLog for photo-uploader
 ============================
 
 Major changes for each release are described here. Detailed changes between
-two versions can be retrieved from Subversion.
+two versions can be retrieved from Git.
 
 0.8
 === (2009-10-30)
