--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,11 @@ ChangeLog for photo-uploader
 Major changes for each release are described here. Detailed changes between
 two versions can be retrieved from Git.
 
+0.9
+=== (2010-02-10)
+
+* Fixed grabbing URL from imageshack.
+
 0.8
 === (2009-10-30)
 
