--- a/ChangeLog
+++ b/ChangeLog
@@ -5,11 +5,12 @@ Major changes for each release are described here. Detailed changes between
 two versions can be retrieved from Git.
 
 0.10
-==== (2010-10-??)
+==== (2013-03-20)
 
 * Compatibility with Python 3.
 * Fix build with Python 2.7.
 * Added documentation in Sphinx format.
+* Updated imageshack support.
 
 0.9
 === (2010-02-10)
