--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,13 @@ ChangeLog for photo-uploader
 Major changes for each release are described here. Detailed changes between
 two versions can be retrieved from Git.
 
+0.12
+==== (2013-02-??)
+
+* Drop support for no longer available services:
+	ILikePhoto, iTesco.cz, Fotostar, Droxi,
+	DM-paradies.
+
 0.11
 ==== (2013-10-28)
 
